# property-app

./: .dockerignore  .editorconfig  .env.example  .envrc  .flake8  .flaskenv  .gitignore  .pre-commit-config.yaml  Brewfile  Dockerfile  LICENSE  MANIFEST.in  Procfile  README.md  alembic.ini  cdk.py  docker-compose.build.yml  docker-compose.yml  gunicorn.conf.py  lerna.json  mkdocs.yml  mypy.ini  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  rollup.config.js  setup.py  tailwind.config.js  tasks.py  tox.ini
.github/workflows/: data_pipeline.yml  tcad.yml
data/schema/: PROP.csv  TCAD_Layout.numbers
dbt/: dbt_project.yml
dbt/macros/: grant_select_on_schemas.sql
dbt/models/permit/: permit.sql  permit_address.sql  permit_raw.sql  schema.yml
dbt/models/property/: property.sql  property_geometry.sql  schema.yml
dbt/profiles/: .user.yml  profiles.yml
deploy/: docker-compose.yml
docs/: design.md  extract.md  index.md  property-app-search-wire.excalidraw  roadmap.md
migrations/: alembic.ini  env.py  script.py.mako
migrations/versions/: 9f066f062d8e_add_auth.py  f0c71f8aa837_add_auth.py
nginx/: Dockerfile  default.conf
packer/: server.json
packer/scripts/: apt-update.sh  install-docker.sh  raise-file-handles.sh  setup-ufw.sh  wait-10.sh
pages/: index.js
rds-tunnel/: ssh_config  sshpass.sh
requirements/: all.in  base.in  base.txt  common.in  dev.in  local.in  local.txt  prod.in  tests.in  tools.in
src/property_app/: __init__.py  app.py  app_info.py  auth.py  cache.py  cli.py  config.py  database.py  dynamodb.py  logging.py  middleware.py  routes.py  utility.py
src/property_app/crud/: property.py
src/property_app/database/: __init__.py  app_base.py  base.py  metadata.py  session.py  types.py
src/property_app/js/: .gitignore  entry.js  rollup.config.js  tailwind.config.js
src/property_app/js/components/: NavBar.js  PlaceholderIcon.js  Table.js  TailwindTransition.js
src/property_app/js/components/layout/: AppLayout.js
src/property_app/js/hooks/: use-component-visible.js
src/property_app/js/pages/: Dashboard.js  Index.js  SignUp.js  UserDetail.js  UserList.js
src/property_app/js/src/pages/: UserDetail.js
src/property_app/lib/: inertia.py  jinja.py  messages.py  util.py
src/property_app/main/: __init__.py  router.py  routes.py
src/property_app/main/pages/: index.py
src/property_app/main/templates/: base.html  index.html
src/property_app/main/views/: __init__.py  index.py  user.py
src/property_app/models/: __init__.py  auth.py  permit.py  property.py  user.py
src/property_app/static/: base.css  inter.css
src/property_app/templates/: base.html
src/property_app/views/: dashboard.py  index.py  signup.py  user.py
src/property_client/: package.json  rollup.config.js
src/property_client/src/: App.js  entry.js
src/property_client/src/components/: NavBar.js  Table.js  TailwindTransition.js
src/property_client/src/components/layout/: AppLayout.js  DefaultLayout.js
src/property_client/src/pages/: Index.js  UserDetail.js  UserList.js
src/property_etl/: cli.py  config.py  database.py  openaddresses.py  parcel.py  tcad.py
tests/: test_app.py
