[tool.poetry]
name = "property_app"
version = "0.0.1"
description = ""
authors = ["Anthony <anthony@mcclosky.dev>"]

packages = [
    { include = "property_app", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"

starlette = "^0.13.2"
sqlalchemy = "^1.3.13"
alembic = "^1.4.0"
sqlalchemy-utils = "^0.36.1"
sqlalchemy-mixins = "^1.1"
structlog = "^20.1.0"
pandas = "^1.0.1"
gunicorn = "^20.0.4"
decorator = "^4.4.2"

[tool.poetry.dev-dependencies]

invoke = "^1.4.1"
black = "^19.10b0"
pytest = "^5.3.5"
ipython = "^7.13.0"

[tool.black]
line-length = 120
target-version = ["py37"]

[tool.isort]
atomic = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

known_first_party = ["property_app"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

