[tool.poetry]
name = "property_app"
version = "0.0.1"
description = ""
authors = ["Anthony <anthony@mcclosky.dev>"]

packages = [
    { include = "property_app", from = "src" }
]

include = ["**/templates/*.html", "**/static/*.css"]

[tool.poetry.scripts]
property = 'property_app.app:start'

[tool.poetry.dependencies]
python = "^3.7"

starlette = "^0.13.2"
sqlalchemy = "^1.3.13"
alembic = "^1.4.0"
sqlalchemy-utils = "^0.36.1"
sqlalchemy-mixins = { git = "git@github.com:absent1706/sqlalchemy-mixins.git", rev = "43c0a12" }
structlog = "^20.1.0"
pandas = "^1.0.1"
gunicorn = "^20.0.4"
decorator = "^4.4.2"
starlette-context = "^0.2.0"
ujson = "^1.35"
jinja2 = "^2.11.1"
pendulum = "^2.0.5"
psycopg2-binary = "^2.8.4"
uvicorn = "^0.11.3"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]

invoke = "^1.4.1"
black = "^19.10b0"
pytest = "^5.3.5"
ipython = "^7.13.0"
aiofiles = "^0.4.0"
mypy = "^0.761"
sqlalchemy-stubs = "^0.3"
colorama = "^0.4.3"

[tool.black]
line-length = 88
target-version = ["py37"]

[tool.isort]
atomic = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

known_first_party = ["property_app"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

