[tool.poetry]
name = "property_app"
version = "0.0.1"
description = ""
license = "Apache-2.0"
authors = ["Anthony <anthony@mcclosky.dev>"]

packages = [
    { include = "property_app", from = "src" }
]

include = [
    "**/templates/*.html", 
    "**/static/*.css",
    "dist/assets/**/*",
    ]

[tool.poetry.scripts]
property = 'property_app.app:start'
extract = 'property_etl.cli:cli'

[tool.poetry.dependencies]
python = "^3.7"

starlette = "^0.13.2"
sqlalchemy = "^1.3.13"
alembic = "^1.4.0"
sqlalchemy-utils = "^0.36.1"
sqlalchemy-mixins = { git = "git@github.com:absent1706/sqlalchemy-mixins.git", rev = "43c0a12" }
structlog = "^20.1.0"
pandas = "^1.0.1"
gunicorn = "^20.0.4"
decorator = "^4.4.2"
starlette-context = "^0.2.0"
ujson = "^1.35"
jinja2 = "^2.11.1"
pendulum = "^2.0.5"
psycopg2-binary = "^2.8.4"
uvicorn = "^0.11.3"
typing-extensions = "^3.7.4"
python-dotenv = "^0.13.0"
pydantic = "^1.5.1"
email-validator = "^1.1.0"
itsdangerous = "^1.1.0"
starlette-authlib = "^0.1.6"
sqlalchemy_mixins = "^1.2.1"
passlib = "^1.7.2"
dbt = {version = "^0.16.1", optional = true, extras = ["data"]}
socrata2sql = {version = "^0.1.4", optional = true, extras = ["data"]}
mkdocs = {version = "^1.1.2", optional = true, extras = ["docs"]}
mkdocs-material = {version = "^5.1.6", optional = true, extras = ["docs"]}
dataset = {version = "^1.3.1", optional = true, extras = ["data"]}
pyodbc = {version = "^4.0.30", optional = true, extras = ["tcad"]}
tqdm = {version = "^4.46.0", optional = true}
rich = "^1.1.6"
pynamodb = "^4.3.2"
postal = "^1.1.8"
census = "^0.8.14"
rtree = "^0.9.4"
geopandas = {git = "https://github.com/geopandas/geopandas.git", rev = "25f6064"}
geoalchemy2 = "^0.8.2"
shapely = "^1.7.0"
esridump = "^1.9.3"
pynamodb-attributes = "^0.2.7"

[tool.poetry.extras]
data = ["dbt", "socrata2sql", "dataset"]
docs = ["mkdocs", "mkdocs-material"]
tcad = ["pyodbc"]

[tool.poetry.dev-dependencies]

invoke = "^1.4.1"
black = "^19.10b0"
pytest = "^5.3.5"
ipython = "^7.13.0"
aiofiles = "^0.4.0"
mypy = "^0.761"
sqlalchemy-stubs = "^0.3"
colorama = "^0.4.3"
flake8 = "^3.7.9"
pyinvoke = "^1.0.4"
rope = "^0.17.0"

[tool.black]
line-length = 88
target-version = ["py37"]

[tool.isort]
atomic = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

known_first_party = ["property_app"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

